1.6/_sources/modules/generated/sklearn.model_selection.TunedThresholdClassifierCV.rst.txt
TunedThresholdClassifierCV
==========================

.. currentmodule:: sklearn.model_selection

.. autoclass:: TunedThresholdClassifierCV
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.model_selection.TunedThresholdClassifierCV sklearn.model_selection.TunedThresholdClassifierCV.__init__ sklearn.model_selection.TunedThresholdClassifierCV.decision_function sklearn.model_selection.TunedThresholdClassifierCV.fit sklearn.model_selection.TunedThresholdClassifierCV.get_metadata_routing sklearn.model_selection.TunedThresholdClassifierCV.get_params sklearn.model_selection.TunedThresholdClassifierCV.predict sklearn.model_selection.TunedThresholdClassifierCV.predict_log_proba sklearn.model_selection.TunedThresholdClassifierCV.predict_proba sklearn.model_selection.TunedThresholdClassifierCV.score sklearn.model_selection.TunedThresholdClassifierCV.set_params sklearn.model_selection.TunedThresholdClassifierCV.set_score_request 
   :add-heading: Gallery examples
   :heading-level: -