1.7/_sources/modules/generated/sklearn.model_selection.TunedThresholdClassifierCV.rst.txt
TunedThresholdClassifierCV
==========================

.. currentmodule:: sklearn.model_selection

.. autoclass:: TunedThresholdClassifierCV
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.model_selection.TunedThresholdClassifierCV sklearn.model_selection.TunedThresholdClassifierCV.__delattr__ sklearn.model_selection.TunedThresholdClassifierCV.__dir__ sklearn.model_selection.TunedThresholdClassifierCV.__eq__ sklearn.model_selection.TunedThresholdClassifierCV.__format__ sklearn.model_selection.TunedThresholdClassifierCV.__ge__ sklearn.model_selection.TunedThresholdClassifierCV.__getattribute__ sklearn.model_selection.TunedThresholdClassifierCV.__getstate__ sklearn.model_selection.TunedThresholdClassifierCV.__gt__ sklearn.model_selection.TunedThresholdClassifierCV.__hash__ sklearn.model_selection.TunedThresholdClassifierCV.__init__ sklearn.model_selection.TunedThresholdClassifierCV.__init_subclass__ sklearn.model_selection.TunedThresholdClassifierCV.__le__ sklearn.model_selection.TunedThresholdClassifierCV.__lt__ sklearn.model_selection.TunedThresholdClassifierCV.__ne__ sklearn.model_selection.TunedThresholdClassifierCV.__new__ sklearn.model_selection.TunedThresholdClassifierCV.__reduce__ sklearn.model_selection.TunedThresholdClassifierCV.__reduce_ex__ sklearn.model_selection.TunedThresholdClassifierCV.__repr__ sklearn.model_selection.TunedThresholdClassifierCV.__setattr__ sklearn.model_selection.TunedThresholdClassifierCV.__setstate__ sklearn.model_selection.TunedThresholdClassifierCV.__sizeof__ sklearn.model_selection.TunedThresholdClassifierCV.__sklearn_clone__ sklearn.model_selection.TunedThresholdClassifierCV.__sklearn_tags__ sklearn.model_selection.TunedThresholdClassifierCV.__str__ sklearn.model_selection.TunedThresholdClassifierCV.__subclasshook__ sklearn.model_selection.TunedThresholdClassifierCV._build_request_for_signature sklearn.model_selection.TunedThresholdClassifierCV._fit sklearn.model_selection.TunedThresholdClassifierCV._get_curve_scorer sklearn.model_selection.TunedThresholdClassifierCV._get_default_requests sklearn.model_selection.TunedThresholdClassifierCV._get_doc_link sklearn.model_selection.TunedThresholdClassifierCV._get_metadata_request sklearn.model_selection.TunedThresholdClassifierCV._get_param_names sklearn.model_selection.TunedThresholdClassifierCV._get_params_html sklearn.model_selection.TunedThresholdClassifierCV._get_response_method sklearn.model_selection.TunedThresholdClassifierCV._html_repr sklearn.model_selection.TunedThresholdClassifierCV._repr_html_inner sklearn.model_selection.TunedThresholdClassifierCV._repr_mimebundle_ sklearn.model_selection.TunedThresholdClassifierCV._validate_params sklearn.model_selection.TunedThresholdClassifierCV.decision_function sklearn.model_selection.TunedThresholdClassifierCV.fit sklearn.model_selection.TunedThresholdClassifierCV.get_metadata_routing sklearn.model_selection.TunedThresholdClassifierCV.get_params sklearn.model_selection.TunedThresholdClassifierCV.predict sklearn.model_selection.TunedThresholdClassifierCV.predict_log_proba sklearn.model_selection.TunedThresholdClassifierCV.predict_proba sklearn.model_selection.TunedThresholdClassifierCV.score sklearn.model_selection.TunedThresholdClassifierCV.set_params sklearn.model_selection.TunedThresholdClassifierCV.set_score_request 
   :add-heading: Gallery examples
   :heading-level: -